Commit crud projects

--- a/Investigation.WEB/_Imports.razor
+++ b/Investigation.WEB/_Imports.razor
@@ -1,4 +1,4 @@
-﻿@using System.Net.Http
+﻿﻿@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using Investigation.WEB
 @using Investigation.WEB.Layout
+@using Investigation.WEB.Shared
+@using Investigation.WEB.Repositories
+@using Investigation.Shared.Entities
+@using CurrieTechnologies.Razor.SweetAlert2
