Commit arreglo de entidades, controladores y commit de todos los cruds en la parte web

--- a/Investigation.WEB/Layout/NavMenu.razor
+++ b/Investigation.WEB/Layout/NavMenu.razor
@@ -9,16 +9,56 @@
 
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="projects">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Projects
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="investigators">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Investigators
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="investigatorsprojects">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> InvestigatorsProjects
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="activities">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Activities
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="resources">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Resources
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="activitiesResources">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> ActivitiesResources
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="publications">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Publications
+            </NavLink>
+        </div>
+
+
     </nav>
 </div>
 
