--- a/Investigation.WEB/Pages/Publication/PublicationsIndex.razor
+++ b/Investigation.WEB/Pages/Publication/PublicationsIndex.razor
@@ -1,4 +1,4 @@
-﻿@page "/Projects"
+﻿@page "/Publications"
 @using Investigation.Shared.Entities
 @using Investigation.WEB.Repositories
 @using Investigation.WEB.Shared
@@ -9,15 +9,15 @@
 <div class="card">
     <div class="card-header">
         <span>
-            <i class="bi bi-person" /> Projects
-            <a class="btn btn-primary btn-sm float-end" href="/Projects/create"><i class="bi bi-plus-circle" />New Project</a>
+            <i class="bi bi-person" /> Publications
+            <a class="btn btn-primary btn-sm float-end" href="/Publications/create"><i class="bi bi-plus-circle" />New Publication</a>
 
         </span>
     </div>
 
     <div class="card-body">
 
-        <GenericList MyList="Projects">
+        <GenericList MyList="Publications">
 
             <Body>
                 <table class="table table-striped">
@@ -27,18 +27,17 @@
                         </tr>
                     </thead>
                     <tbody>
-                        @foreach (var item in Projects!)
+                        @foreach (var item in Publications!)
                         {
                             <tr>
-
                                 <td> @item.Id</td>
-                                <td> @item.Nombre</td>
-                                <td>@item.Descripcion </td>
-                                <td>@item.FechaInicio</td>
-                                <td>@item.FechaFinal</td>
+                                <td> @item.Titulo</td>
+                                <td>@item.Autor </td>
+                                <td> @GetProjectName(item.ProjectId)</td>
+                                <td>@item.FechaPublicacion</td>
 
                                 <td>
-                                    <a href="/Projects/edit/@item.Id" class="btn btn-sm btn-warning"><i class="bi bi-pencil-square" /> Editar</a>
+                                    <a href="/Publications/edit/@item.Id" class="btn btn-sm btn-warning"><i class="bi bi-pencil-square" /> Editar</a>
                                     <button @onclick=@(() => DeleteAsycn(item)) class="btn btn-sm btn-danger"><i class="bi bi-trash-fill" /> Borrar</button>
                                 </td>
                             </tr>
@@ -52,6 +51,8 @@
 
 
 @code {
+    public List<Publication> Publications { get; set; }
+
     public List<Project> Projects { get; set; }
 
 
@@ -62,24 +63,34 @@
 
     private async Task LoadAsync()
     {
-        var responseHttp = await repository.GetAsync<List<Project>>("api/Projects");
+        var responseHttp = await repository.GetAsync<List<Publication>>("api/Publications");
         if (responseHttp.Error)
         {
             var message = await responseHttp.GetErrorMessageAsync();
             await sweetAlertService.FireAsync("Error", message, SweetAlertIcon.Error);
             return;
         }
-        Projects = responseHttp.Response;
+        Publications = responseHttp.Response;
+
+        var responseProjects = await repository.GetAsync<List<Project>>("api/Projects");
+        if (!responseProjects.Error)
+        {
+            Projects = responseProjects.Response;
+        }
     }
 
+    private string GetProjectName(int projectId)
+    {
+        var project = Projects.FirstOrDefault(i => i.Id == projectId);
+        return project != null ? project.Nombre : "Proyecto no encontrado";
+    }
 
-
-    private async Task DeleteAsycn(Project project)
+    private async Task DeleteAsycn(Publication publication)
     {
         var result = await sweetAlertService.FireAsync(new SweetAlertOptions
             {
                 Title = "Confirmación",
-                Text = $"¿Estas seguro de querer borrar el proyecto: {project.Nombre}?",
+                Text = $"¿Estas seguro de querer borrar la publicación: {publication.Titulo}?",
                 Icon = SweetAlertIcon.Question,
                 ShowCancelButton = true,
             });
@@ -89,12 +100,12 @@
             return;
         }
 
-        var responseHttp = await repository.DeleteAsync<Project>($"api/Projects/{project.Id}");
+        var responseHttp = await repository.DeleteAsync<Activity>($"api/Publications/{publication.Id}");
         if (responseHttp.Error)
         {
             if (responseHttp.HttpResponseMessage.StatusCode == System.Net.HttpStatusCode.NotFound)
             {
-                navigationManager.NavigateTo("Projects");
+                navigationManager.NavigateTo("Publications");
             }
             else
             {
